# torii

./: CLAUDE.md  Cargo.toml
docs/: POSTMAN_CLONE_IMPLEMENTATION_PLAN.md  POSTMAN_CLONE_PHASE_1_EXECUTABLE_PLAN.md  STATE_MANAGEMENT_RESEARCH.md  STATE_MANAGEMENT_RESEARCH_V2.md  gpui-architecture.md  gpui-performance.md  phase-1.md  phase-2.md  phase-3.5.md  phase-3.md  phase-4.md  phase-5.md  plan.md  request-console-plan.md  response-popovers-plan.md  state_management.md  ui-cleanup.md
docs/backlog/: gpui-url-variable-editor-plan.md  response-transport-fork-plan.md
docs/completed/: phase-1.md  phase-2.md  phase-3.5.md
docs/completed/misc/: tab-focus-fix.md  ui-cleanup.md
docs/diagnose/: idle-cpu-audit-2.md  idle-cpu-audit-claude.md  render-loop-audit.md  render-loop-prevention.md
docs/research/: api-client-variable-highlighting-research.md  claude-design-web-raw.md  claude-design-web.md
i18n/en/: app.ftl  gpui-starter.ftl  torii.ftl
i18n/zh-CN/: app.ftl  gpui-starter.ftl  torii.ftl
migrations/: 0001_initial.sql  0002_history_response_meta_v2.sql  0002_indexes.sql  0003_phase4_tree_and_variables.sql  0003_recovery_metadata.sql  0004_tab_session_state.sql  0004_workspace_scoped_environments.sql  0005_phase5_history_protocols.sql  0005_tab_session_metadata.sql  0006_request_editor_core.sql  0007_history_response_metadata.sql  0008_history_request_snapshot.sql  0009_history_request_method_snapshot.sql
src/: app.rs  lib.rs  main.rs  menus.rs  root.rs  sidebar.rs  title_bar.rs
src/domain/: collection.rs  environment.rs  folder.rs  history.rs  ids.rs  item_id.rs  mod.rs  preferences.rs  request.rs  response.rs  revision.rs  secret_ref.rs  variable.rs  workspace.rs
src/infra/: linked_collection_format.rs  mod.rs  paths.rs
src/infra/blobs/: cleanup.rs  mod.rs  writer.rs
src/infra/db/: connect.rs  mod.rs  pragmas.rs  row_types.rs
src/infra/secrets/: keyring_store.rs  mod.rs
src/repos/: collection_repo.rs  environment_repo.rs  folder_repo.rs  history_repo.rs  mod.rs  preferences_repo.rs  request_repo.rs  secret_ref_repo.rs  tab_session_repo.rs  workspace_repo.rs
src/root/: actions.rs  mod.rs  request_pages.rs  sidebar.rs  tab_ops.rs
src/root/sidebar/: mod.rs  tree_ops.rs  tree_view.rs
src/services/: app_services.rs  collection_store.rs  error_classifier.rs  linked_collection_reconcile.rs  mod.rs  recovery.rs  request_body_payload.rs  request_draft.rs  request_execution.rs  secret_manager.rs  session_restore.rs  startup.rs  telemetry.rs  tokio_runtime.rs  tree_mutation.rs  ui_preferences.rs  variable_resolution.rs  workspace_tree.rs
src/session/: item_key.rs  mod.rs  request_editor_state.rs  tab_manager.rs  window_layout.rs  workspace_session.rs
src/views/: about.rs  form_page.rs  home.rs  http_method.rs  layout_debug.rs  mod.rs  settings.rs  tab_host.rs
src/views/item_tabs/: collection_tab.rs  environment_tab.rs  folder_tab.rs  history_tab.rs  mod.rs  request_tab.rs  workspace_tab.rs
src/views/item_tabs/request_tab/: auth_editor.rs  auth_secret_ops.rs  body_editor.rs  body_file_state.rs  helpers.rs  init.rs  kv_editor.rs  kv_rows_state.rs  kv_sync_state.rs  layout.rs  request_ops.rs  response_panel.rs  state.rs  subscriptions.rs  sync.rs  types.rs  ui_actions.rs
src/views/item_tabs/request_tab/kv/: core.rs  mod.rs  rows.rs  sync.rs
src/views/item_tabs/request_tab/response_panel/: actions.rs  chrome.rs  content.rs  content_tabs.rs  tables.rs
src/views/item_tabs/request_tab/response_panel/popovers/: mod.rs  network.rs  size.rs  status.rs  time.rs
tests/: blob_store.rs  collection_store_dispatch.rs  domain_ids_revision.rs  history_query.rs  i18n_smoke.rs  item_tab_open_focus.rs  linked_collection_roundtrip.rs  migration_roundtrip.rs  mock_transport.rs  phase_35_helpers.rs  request_editor_lifecycle.rs  request_send_cancel_race.rs  secret_manager.rs  secret_storage.rs  settings_migration.rs  sidebar_selection_regression.rs  startup_recovery.rs  tab_close_on_delete.rs  tab_manager_behavior.rs  tab_session_restore.rs  tree_transactions.rs  ui_preferences_roundtrip.rs  variable_resolution.rs  workspace_collection_flow.rs  workspace_tree_linked_health.rs
tests/common/: mod.rs
