[workspace]
members = ["."]

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    "font-kit",
    "x11",
    "wayland",
    "runtime_shaders",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "registry",
], default-features = false }
rust-i18n = "3"
regex = "1"
gpui-form = { git = "https://github.com/stayhydated/gpui-form", branch = "component-story", package = "gpui-form" }
koruma = { version = "0.7", features = ["fluent"] }
koruma-collection = { version = "0.7", features = ["email", "url", "fluent"] }
es-fluent = { version = "0.14", features = ["derive"] }
es-fluent-lang = "0.14"
es-fluent-manager-embedded = "0.14"
strum = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.12", features = ["stream", "gzip", "brotli", "deflate"] }
http = "1"
url = "2"
futures = "0.3"
async-trait = "0.1"
base64 = "0.22"
serde_urlencoded = "0.7"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
sea-query = "0.32"
directories = "6"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
bytes = "1"
keyring = "3"
blake3 = "1"
metrics = "0.23"

[package]
name = "torii"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rust-i18n.workspace = true
regex.workspace = true
gpui-form.workspace = true
koruma.workspace = true
koruma-collection.workspace = true
es-fluent.workspace = true
es-fluent-lang.workspace = true
es-fluent-manager-embedded.workspace = true
strum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
http.workspace = true
url.workspace = true
futures.workspace = true
async-trait.workspace = true
base64.workspace = true
serde_urlencoded.workspace = true
sqlx.workspace = true
sea-query.workspace = true
directories.workspace = true
uuid.workspace = true
time.workspace = true
bytes.workspace = true
keyring.workspace = true
blake3.workspace = true
metrics.workspace = true

[build-dependencies]
es-fluent = { workspace = true, features = ["build"] }

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
gpui = { opt-level = 3 }
gpui_platform = { opt-level = 3 }
gpui_macros = { opt-level = 3 }
